<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/account"
        android:icon="@drawable/ic_baseline_person"
        android:title="Account Info"
        android:onClick="accountInfoSelected"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/previouslyWatched"
        android:icon="@drawable/ic_baseline_video_library"
        android:title="Previously Watched"
        android:onClick="previouslyWatchedSelected"
        app:showAsAction="never" />

    <item
        android:id="@+id/watchLater"
        android:icon="@drawable/ic_baseline_watch_later_24"
        android:title="Watch Later"
        android:onClick="watchLaterSelected"
        app:showAsAction="never" />

    <item
        android:id="@+id/about"
        android:icon="@drawable/ic_baseline_info_24"
        android:title="About/Settings"
        android:onClick="aboutSettingsSelected"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/findMovies"
        android:title="Home/Sign Out"
        android:onClick="homeSelected"
        app:showAsAction="never" />

</menu>