<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:layout_marginBottom="15dp"
	android:orientation="vertical"
	android:layout_gravity="center_horizontal">

	<com.google.android.material.card.MaterialCardView
		android:id="@+id/card"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		app:cardCornerRadius="20dp"
		app:cardElevation="10dp"
		android:layout_margin="10dp"
		android:layout_gravity="center_horizontal">

		<LinearLayout
			android:layout_width="300dp"
			android:layout_height="wrap_content"
			android:orientation="vertical">

			<TextView
				android:id="@+id/poster_title"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center"
				android:layout_marginLeft="16dp"
				android:layout_marginTop="16dp"
				android:layout_marginRight="16dp"
				android:layout_marginBottom="16dp"
				android:fontFamily="sans-serif-medium"
				android:text="Title"
				android:textColor="@color/black"
				android:textSize="18sp" />

			<ImageView
				android:id="@+id/poster"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center"
				android:adjustViewBounds="true" />


			<Button
				android:id="@+id/expandButton"
				android:layout_width="140dp"
				android:layout_height="wrap_content"
				android:layout_gravity="center"
				android:layout_marginTop="5dp"
				android:layout_marginBottom="10dp"
				android:backgroundTint="#171FC6"
				android:text="Show More Info"
				android:contentDescription="get more info about the movie"
				android:textColor="#FFFFFF"
				android:textSize="11sp"
				android:textStyle="bold" />

			<LinearLayout
				android:id="@+id/extraInfo"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="vertical"
				android:visibility="gone">

				<TextView
					android:id="@+id/poster_release_date"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_gravity="fill"
					android:layout_marginLeft="8dp"
					android:layout_marginTop="16dp"
					android:layout_marginRight="8dp"
					android:fontFamily="sans-serif-medium"
					android:text="Release Date: "
					android:textColor="@color/black"
					android:textSize="14sp" />

				<TextView
					android:id="@+id/poster_rating"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_gravity="fill"
					android:layout_marginLeft="8dp"
					android:layout_marginTop="6dp"
					android:layout_marginRight="8dp"
					android:layout_marginBottom="8dp"
					android:fontFamily="sans-serif-medium"
					android:text="Average Rating: "
					android:textColor="@color/black"
					android:textSize="14sp" />

				<TextView
					android:id="@+id/poster_overview"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_gravity="fill"
					android:layout_marginLeft="8dp"
					android:layout_marginTop="16dp"
					android:layout_marginRight="8dp"
					android:layout_marginBottom="16dp"
					android:fontFamily="sans-serif-medium"
					android:gravity="center"
					android:text="Overview: "
					android:textColor="@color/black"
					android:textSize="16sp" />


				<include
					android:id="@+id/addListLayout"
					layout="@layout/add_to_lists_buttons"
					android:visibility="visible" />

				<include
					android:id="@+id/removeListLayout"
					layout="@layout/remove_from_list_button"
					android:visibility="gone" />

			</LinearLayout>
		</LinearLayout>


	</com.google.android.material.card.MaterialCardView>
	<!-- Modeled after Adam Champion's list_item_gallery view from his TicTacToeNew application -->
</androidx.appcompat.widget.LinearLayoutCompat>
